After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705208 - [dvbsrc] should check if _XOPEN_SOURCE is already defined
[dvbsrc] should check if _XOPEN_SOURCE is already defined
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other All
: Normal normal
: 1.1.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-07-31 16:04 UTC by Julien Isorce
Modified: 2013-08-03 17:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
check if _GNU_SOURCE before to define _XOPEN_SOURCE (648 bytes, patch)
2013-07-31 16:04 UTC, Julien Isorce
rejected Details | Review

Description Julien Isorce 2013-07-31 16:04:29 UTC
Created attachment 250557 [details] [review]
check if _GNU_SOURCE before to define _XOPEN_SOURCE

When _GNU_SOURCE is defined I fail to build dvbsrc: "error: previous definition"

It should check if _GNU_SOURCE before to define _XOPEN_SOURCE
Comment 1 Edward Hervey 2013-08-01 09:34:15 UTC
The real question is ... do we still need that define in 2013 ? :)
Comment 2 Tim-Philipp Müller 2013-08-03 17:11:21 UTC
Let's try this and see if it causes any problems.

 commit 933965984f96ed231f69996ebbdd4adad5da234d
 Author: Tim-Philipp Müller <tim@centricular.net>
 Date:   Sat Aug 3 18:07:30 2013 +0100

    dvbsrc: remove use of _XOPEN_SOURCE
    
    Which causes problems when used with _GNU_SOURCE apparently, and it
    seems it was only set because of usleep(), which we can just replace
    with g_usleep() until we get rid of those entirely.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=705208